2007-07-06  Quentin Mathe <qmathe@club-internet.fr>
	* Info.plist: Modified CFBundleIdentifier to be valid and added 
	FontManager.tif icon reference.
	* FontManagerInfo.plist: Added ApplicationIcon and NSIcon.
	* GNUmakefile. Updated.

2007-07-04  Isaiah Beerbower <public@ipaqah.com>
	* Info.plist: Fix "Can't create document" error message on Mac OS X.
	* PQController.*: Add NSSplitView delegate methods.
	* English.lproj/MainMenu.nib/*: Set PQController as NSSplitView's delegate.
	* English.lproj/MainMenu.gorm/*: Same.
	* PQFontSampleView.m ([-drawRect:]): Moved some code back because it was
	  causing a drawing bug when moved. (:

2007-06-22  Isaiah Beerbower <public@ipaqah.com>
	* PQFontSampleView.m ([-drawRect:]): Moved some code for performance reasons.

2007-06-22  Isaiah Beerbower <public@ipaqah.com>
	* PQFontSampleView.m ([-drawRect:]): Worked around problem with GNUstep's
		[-displayName].
	* PQFontSampleView.m ([-drawRect:]): Fix a drawing bug caused by auto resize.

2007-06-21  Isaiah Beerbower <public@ipaqah.com>
	* PQSampleController.*: Removed some commented out code.
	* PQController.m: Better method for finding style name.

2007-06-21  Isaiah Beerbower <public@ipaqah.com>
	* English.lproj/MainMenu.gorm: Totally redid the gorm file.
	* *.m: Various small additions.

2007-06-20  Isaiah Beerbower <public@ipaqah.com>
	* PQSampleController.*: Simplified unnecessarily complex code.
	* English.lproj/MainMenu.nib: Totally redid the nib.

2007-06-19  Isaiah Beerbower <public@ipaqah.com>
	* PQController.m: Put parentheses around 'assignment used as truth value'.
	* PQSampleController.*: Added -changeSize.
	* English.lproj/MainMenu.nib: Added connection between size slider and sample
	  controller's -changeSize.
	* README: A README.

2007-06-17  Isaiah Beerbower <public@ipaqah.com>
	* PQFontSampleView.m: Handles changing colors.
	* PQSampleController.m: Handles changing colors.

2007-06-17  Isaiah Beerbower <public@ipaqah.com>