@@ -3,9 +3,17 @@
 	ApplicationName = "Font Manager";
 	ApplicationIcon = "FontManager.tif";
 	ApplicationRelease = "Font Manager 0.1";
-	Authors = ("Isaiah Beerbower <ipaqah@tm.net>");
+	Authors = ("Isaiah Beerbower <public@ipaqah.com>");
 	Copyright = "Copyright 2007 Isaiah Beerbower";
-	CopyrightDescription = "Released under the Modified BSD licence";
+	CopyrightDescription = "Released under the 3-Clause BSD licence";
 	NSIcon = "FontManager.tif";
 	NSRole = "Viewer";
+	NSTypes = (
+	{
+		NSName = "PQFontDocument";
+		NSHumanReadableName = "Font Document";
+		NSUnixExtensions = ("ttf");
+		NSRole = "Viewer";
+		NSDocumentClass = PQFontDocument;
+	} );
 }
