@@ -15,6 +15,7 @@ APP_NAME = FontManager
 FontManager_OBJC_FILES = \
   PQMain.m \
   PQController.m \
+	PQFontDocument.m \
   PQFontFamily.m \
   PQFontSampleView.m \
   PQSampleController.m
@@ -25,6 +26,7 @@ FontManager_LANGUAGES = \
 
 FontManager_LOCALIZED_RESOURCE_FILES = \
   MainMenu.gorm \
+	FontDocument.gorm \
   Localizable.strings
 
 FontManager_RESOURCE_FILES = \
