@@ -27,8 +27,10 @@
 	[super init];
 
 	fonts = [[NSArray alloc] init];
+	
 	defaultSampleText =
 		[NSArray arrayWithObjects:NSLocalizedString(@"PQPangram", nil), nil];
+			
 	sampleTextHistory = [[NSMutableArray alloc] init];
 
 
@@ -42,6 +44,7 @@
 		[NSNumber numberWithInt:144], [NSNumber numberWithInt:288], nil];
 
 	fontsNeedUpdate = YES;
+	isCustom = NO;
 
 	RETAIN(fonts);
 	RETAIN(defaultSampleText);
@@ -53,13 +56,39 @@
 
 - (void) awakeFromNib
 {
-	[sampleView setAutoSize: YES];
-	[sampleView setFontSize: 24];
-	[sampleView setSampleText: NSLocalizedString(@"PQPangram", nil)];
-
-	/* Couldn't set "Uses data source" in gorm */
-	[sampleField setUsesDataSource: YES];
-	[sampleField setDataSource: self];
+	if ([sampleView isKindOfClass: [PQFontSampleView class]])
+	{
+		RELEASE(defaultSampleText);
+		defaultSampleText =
+			[NSArray arrayWithObjects:NSLocalizedString(@"PQPangram", nil), nil];
+		RETAIN(defaultSampleText);
+	}
+	else if ([sampleView isKindOfClass: [NSTextView class]])
+	{
+		RELEASE(defaultSampleText);
+		defaultSampleText =
+			[NSArray arrayWithObjects:NSLocalizedString(@"PQParagraph", nil),
+			                          NSLocalizedString(@"PQAlphabet", nil),
+																@"", nil];
+		RETAIN(defaultSampleText);
+	}
+	
+	
+	if ([sampleView isKindOfClass: [PQFontSampleView class]])
+	{
+		[sampleView setAutoSize: YES];
+		[sampleView setFontSize: 24];
+		[sampleView setSampleText: NSLocalizedString(@"PQPangram", nil)];
+	
+		/* Couldn't set "Uses data source" in gorm */
+		[sampleField setUsesDataSource: YES];
+		[sampleField setDataSource: self];
+	}
+	else if ([sampleView isKindOfClass: [NSTextView class]])
+	{
+		[sampleView setString: NSLocalizedString(@"PQParagraph", nil)];
+	}
+	
 	[sizeField setUsesDataSource: YES];
 	[sizeField setDataSource: self];
 
@@ -79,8 +108,21 @@
 - (void) setFonts: (NSArray *)someFonts
 {
 	ASSIGN(fonts, someFonts);
-	fontsNeedUpdate = YES;
-	[sampleView setNeedsDisplay: YES];
+	
+	if ([sampleView isKindOfClass: [PQFontSampleView class]])
+	{
+		fontsNeedUpdate = YES;
+		[sampleView setNeedsDisplay: YES];
+	}
+	else if ([sampleView isKindOfClass: [NSTextView class]])
+	{
+		if ([fonts count] > 0)
+		{
+			[sampleView setFont: [NSFont fontWithName: [fonts objectAtIndex: 0]
+			                                     size: [sizeSlider intValue]]];
+			[self updateControls];
+		}
+	}
 }
 
 - (NSArray *) fonts
@@ -162,28 +204,76 @@
 
 - (void) updateControls
 {
-	[sampleField setStringValue: [sampleView sampleText]];
-	[sizeField setIntValue: [sampleView fontSize]];
-	[sizeSlider setIntValue: [sampleView fontSize]];
+	if ([sampleView isKindOfClass: [PQFontSampleView class]])
+	{
+		[sampleField setStringValue: [sampleView sampleText]];
+		[sizeField setIntValue: [sampleView fontSize]];
+		[sizeSlider setIntValue: [sampleView fontSize]];
+	}
+	else if ([sampleView isKindOfClass: [NSTextView class]])
+	{
+		if ([fonts count] > 0)
+		{
+			[sizeField setIntValue: [[sampleView font] pointSize]];
+			[sizeSlider setIntValue: [[sampleView font] pointSize]];
+		}
+	}
 }
 
 - (void) changeSize: (id)sender
 {
-	[sampleView setFontSize: [sender intValue]];
+	if ([sampleView isKindOfClass: [PQFontSampleView class]])
+	{
+		[sampleView setFontSize: [sender intValue]];
+	}
+	else if ([sampleView isKindOfClass: [NSTextView class]])
+	{
+		if ([fonts count] > 0)
+		{
+			[sampleView setFont: [NSFont fontWithName: [fonts objectAtIndex: 0]
+			                                     size: [sender intValue]]];
+		}
+	}
 	[self updateControls];
 }
 
 - (void) changeColor: (id)sender
 {
-	[sampleView setForegroundColor: [foregroundColorWell color]];
-	[sampleView setBackgroundColor: [backgroundColorWell color]];
+	if ([sampleView isKindOfClass: [PQFontSampleView class]])
+	{
+		[sampleView setForegroundColor: [foregroundColorWell color]];
+		[sampleView setBackgroundColor: [backgroundColorWell color]];
+	}
+	else if ([sampleView isKindOfClass: [NSTextView class]])
+	{
+		[sampleView setTextColor: [foregroundColorWell color]];
+		[sampleView setBackgroundColor: [backgroundColorWell color]];
+	}
 }
 
 - (void) changeSampleText: (id)sender
 {
-	NSString *newSampleText = [sampleField stringValue];
-	[sampleView setSampleText: newSampleText];
-	[self PQAddSampleTextToHistory: newSampleText];
+	NSString *newSampleText;
+	
+	if ([sender isKindOfClass: [NSTextView class]])
+	{
+		newSampleText = [sampleField stringValue];
+	}
+	else if ([sender isKindOfClass: [NSPopUpButton class]])
+	{
+		newSampleText =
+			[defaultSampleText objectAtIndex: [sender indexOfSelectedItem]];
+	}
+	
+	if ([sampleView isKindOfClass: [PQFontSampleView class]])
+	{
+		[sampleView setSampleText: newSampleText];
+		[self PQAddSampleTextToHistory: newSampleText];
+	}
+	else if ([sampleView isKindOfClass: [NSTextView class]])
+	{
+		[sampleView setString: newSampleText];
+	}
 }
 
 @end
